➕ redir to module routing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,11 @@
         "experimentalDecorators": true,
         "removeComments": false,
         "noImplicitAny": false
-    }
+    },
+    "include": [
+        "app/**/*"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
